clusters/building-blocks/media/apps/jellyseerr/app/jellyseerr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  selector:
    app.kubernetes.io/name: jellyseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
