clusters/building-blocks/media/apps/jellyseerr/app/jellyseerr-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`browse.home.${DOMAIN_NAME}`)
    priority: 10
    middlewares:
    - name: local-ipallowlist
      namespace: edge
    services:
    - kind: Service
      name: jellyseerr
      namespace: media
      passHostHeader: true
      port: 5055
      scheme: http
